--- a/Img-compression.html
+++ b/Img-compression.html
@@ -526,8 +526,8 @@
                 <!-- Replace with your AdSense ad unit -->
                 <ins class="adsbygoogle"
                      style="display:block"
-                     data-ad-client="ca-pub-YOUR_ADSENSE_ID"
-                     data-ad-slot="YOUR_AD_UNIT_ID"
+                     data-ad-client="ca-app-pub-6998017192826442/6278107463"
+                     data-ad-slot="ca-app-pub-6998017192826442/6278107463"
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
                 <script>
