--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                         <h3>Image Compressor</h3>
                         <p>Reduce image file size without losing quality. Perfect for websites and social media.</p>
                         <div class="tool-card-footer">
-                            <a href="tools/image-compressor.html" class="tool-link">Use Tool</a>
+                            <a href="tools/Image-compressor.html" class="tool-link">Use Tool</a>
                             <span class="tool-badge">Image</span>
                         </div>
                     </div>
@@ -686,7 +686,7 @@
                         <h3>Image Converter</h3>
                         <p>Convert between JPG, PNG, WebP, and other formats with just a few clicks.</p>
                         <div class="tool-card-footer">
-                            <a href="tools/image-converter.html" class="tool-link">Use Tool</a>
+                            <a href="tools/Image-converter.html" class="tool-link">Use Tool</a>
                             <span class="tool-badge">Image</span>
                         </div>
                     </div>
@@ -700,7 +700,7 @@
                         <h3>Image Resizer</h3>
                         <p>Resize your images to any dimension while maintaining aspect ratio.</p>
                         <div class="tool-card-footer">
-                            <a href="tools/image-resizer.html" class="tool-link">Use Tool</a>
+                            <a href="tools/Image-resizer.html" class="tool-link">Use Tool</a>
                             <span class="tool-badge">Image</span>
                         </div>
                     </div>
@@ -715,7 +715,7 @@
                         <h3>PDF Compressor</h3>
                         <p>Reduce PDF file size while preserving quality. Perfect for email attachments.</p>
                         <div class="tool-card-footer">
-                            <a href="tools/pdf-compressor.html" class="tool-link">Use Tool</a>
+                            <a href="tools/Image-compressor.html" class="tool-link">Use Tool</a>
                             <span class="tool-badge">PDF</span>
                         </div>
                     </div>
